<?php

namespace App\Entity;

interface FurInterface
{
    public function brushFur(): void;
} 