<?php

namespace App\Entity;

interface OmnivoreInterface extends CarnivoreInterface, HerbivoreInterface
{
} 